fix components height on smaller devices

--- a/src/components/investmentPrediction/components/investmentPredictionResults/InvestmentPredictionResults.module.scss
+++ b/src/components/investmentPrediction/components/investmentPredictionResults/InvestmentPredictionResults.module.scss
@@ -1,4 +1,5 @@
 @use "../../../../styles/colors";
+@use "../../../../styles/mixins";
 
 .result {
   grid-area: results;
@@ -6,6 +7,10 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: space-evenly;
+
+  @include mixins.respond-to(md) {
+    height: auto;
+  }
 }
 
 .result__field {
