--- a/src/components/investmentPrediction/components/investmentPredictionTable/investmentPredictionTable.module.scss
+++ b/src/components/investmentPrediction/components/investmentPredictionTable/investmentPredictionTable.module.scss
@@ -5,4 +5,8 @@
   grid-area: table;
   height: 100%;
   overflow-y: auto;
+
+  @include mixins.respond-to(md) {
+    height: 500px;
+  }
 }
